--- a/fastlane/kdocs/indexTemplate/index.html
+++ b/fastlane/kdocs/indexTemplate/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0; url=/android" />
+  <meta http-equiv="refresh" content="0; url=/android/" />
   <title>Document</title>
 </head>
 <body>
